--- a/.github/workflows/not-earthly.yml
+++ b/.github/workflows/not-earthly.yml
@@ -56,6 +56,7 @@ jobs:
 
       - name: Run tests
         run: |
+          echo "BINARY_PATH=$PWD/target/x86_64-unknown-linux-gnu/release/partner-chains-node" >> $GITHUB_ENV
           cargo test --locked --release --features runtime-benchmarks
 
       - name: Generate Chain Specs
