--- a/.github/workflows/not-earthly.yml
+++ b/.github/workflows/not-earthly.yml
@@ -49,16 +49,19 @@ jobs:
           source $HOME/.cargo/env
           rustup target add x86_64-unknown-linux-gnu
 
+      - name: Set global environment variables
+        run: |
+          echo "CARGO_TARGET_DIR=$PWD/target" >> $GITHUB_ENV
+          echo "$PWD/target/x86_64-unknown-linux-gnu/release" >> $GITHUB_PATH
+
       - name: Build partner-chains-node
         run: |
           cargo build -p partner-chains-node --locked --release --target x86_64-unknown-linux-gnu
-          cp target/x86_64-unknown-linux-gnu/release/partner-chains-node partner-chains-node
+          chmod +x $CARGO_TARGET_DIR/x86_64-unknown-linux-gnu/release/partner-chains-node
+          cp $CARGO_TARGET_DIR/x86_64-unknown-linux-gnu/release/partner-chains-node ./partner-chains-node
 
       - name: Run tests
-        run: |
-          echo "BINARY_PATH=$PWD/target/x86_64-unknown-linux-gnu/release/partner-chains-node" >> $GITHUB_ENV
-          chmod +x target/x86_64-unknown-linux-gnu/release/partner-chains-node
-          cargo test --locked --release --features runtime-benchmarks
+        run: cargo test --locked --release --features runtime-benchmarks
 
       - name: Generate Chain Specs
         run: |
