--- a/.envrc
+++ b/.envrc
@@ -9,7 +9,7 @@ export CARDANO_CONFIG_DIR="$(pwd)/docker/config"
 export KUPO_WORKDIR="$RUN_DIR/kupo-db"
 mkdir -p $KUPO_WORKDIR
 
-source envs/devnet/.envrc
+source dev/envs/devnet/.envrc
 
 if [[ -f "$PWD/.envrc.local" ]]; then
   echo using local envrc
